[LRN] fix the overlap issue

--- a/src/app/courses/course/lessons/lesson/lesson.component.scss
+++ b/src/app/courses/course/lessons/lesson/lesson.component.scss
@@ -1,5 +1,5 @@
 .content {
-  min-height: 100vh;
+  min-height: 99vh;
   .loading {
     min-height: var(--space-xl);
     margin: var(--space-xxl) auto;
